--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link text-light" href="/products/contacto/">Contacto <span class="sr-only">(current)</span></a>
+                    <a class="nav-link text-light" href="/products/contacto/">Contacto <span
+                            class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="/products/categoria/">Categoria</a>
@@ -35,14 +36,36 @@
                 <li class="nav-item">
                     <a class="nav-link text-light" href="/products/">Productos</a>
                 </li>
+
+                {% if not user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link text-light" href="/accounts/iniciar">Iniciar sesion</a>
+                </li>
+                {% endif %}
+
+                {% if user.is_authenticated %}
+                <span
+                    style="color:white; margin:0px 5px; padding:10px; background-color: aliceblue; border-radius: 10px;">
+                    <a href="/accounts/profile">
+                        {{ user.username }}
+                    </a>
+
+                </span>
+                <form method="post" action="/accounts/cerrar">
+                    {% csrf_token %}
+                    <input type="submit" value="Cerrar sesion">
+                </form>
+                {% endif %}
             </ul>
             </form>
-            <form class="form-inline my-2 my-lg-0" action = "/products/search-product/" method = "GET">
-                <input class="form-control mr-sm-2" type="text" placeholder="Buscar Producto" aria-label="Search" name = 'search'>
+            <form class="form-inline my-2 my-lg-0" action="/products/search-product/" method="GET">
+
+                <input class="form-control mr-sm-2" type="text" placeholder="Buscar Producto" aria-label="Search"
+                    name='search'>
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
-    
+
     </nav>
 
     {% block contenido %}
