--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,9 @@ Inicio
 {% endblock %}
 
 {% block contenido %}
-<h1>Primera entrega del proyecto Final - Coderhouse</h1>
+<h1>Cosas que tengo que comprar:</h1>
+En esta aplicacion creare una lista de productos que necesito comprar. Se pueden categorizar, para su rapida busqueda, y
+encontrar en una lista de 'Productos' para visualizar mas facil.
 <p></p>
 
 {% endblock %}
